// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input with a value 1`] = `
<input
  className="SpreadsheetGridInput"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder={undefined}
  value="Value"
/>
`;

exports[`Input without a value 1`] = `
<input
  className="SpreadsheetGridInput"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder="Placeholder"
  value=""
/>
`;
